--- a/.github/workflows/magisk.yml
+++ b/.github/workflows/magisk.yml
@@ -19,7 +19,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: windows-latest 
     strategy:
       matrix:
         arch: [x64, arm64]
